crates/pina_cli_renderer/src/snapshots/pina_cli_renderer____tests__escrow_program_cli.snap
---
source: crates/pina_cli_renderer/src/__tests.rs
expression: "snapshot_files(\"escrow_program\")"
---
==== Cargo.toml ====
[package]
name = "escrow_program_cli"
version = "0.1.0"
edition = "2021"
publish = false
description = "Generated CLI for escrowProgram"

[[bin]]
name = "escrow-program-cli"
path = "src/main.rs"

[dependencies]
bs58 = { workspace = true, default-features = true }
clap = { workspace = true, default-features = true, features = ["derive", "std", "env"] }
fixture-client = { path = "../../rust/fixture" }
serde_json = { workspace = true, default-features = true }
solana-rpc-client = { workspace = true, default-features = true }
solana-sdk = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }

==== README.md ====
# escrow-program-cli

Generated command-line interface for the `escrowProgram` program (version 0.0.0).

This crate was generated by `pina generate --client cli-rust`. Do not edit it
by hand; regenerate it instead.

## Usage

```sh
cargo run -p escrow_program_cli -- --help
cargo run -p escrow_program_cli -- <command> --help
```

Global flags:

- `-u, --url <URL>`: `mainnet`, `devnet`, `testnet`, `localhost`, or an https URL (`SOLANA_URL`)
- `-k, --keypair <PATH>`: payer keypair file (`PINA_KEYPAIR`, default `~/.config/solana/id.json`)
- `--program-id <ADDRESS>`: override the on-chain program address
- `--simulate`: simulate instead of sending
- `--json`: machine-readable output

==== src/commands/make.rs ====
//! This code was AUTOGENERATED by `pina_cli_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from the program IDL instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::too_many_arguments
)]

use clap::Args;

use crate::context::CliContext;
use crate::context::CliError;
use fixture_client::instructions::Make;
use fixture_client::instructions::MakeInstructionData;
use solana_sdk::pubkey::Pubkey;

#[derive(Debug, Args)]
pub struct MakeArgs {
	#[arg(long)]
	seed: u64,
	#[arg(long)]
	amount_a: u64,
	#[arg(long)]
	amount_b: u64,
	#[arg(long)]
	bump: u8,
	/// The `maker` account [default: payer]
	#[arg(long)]
	maker: Option<String>,
	/// The `mint_a` account
	#[arg(long)]
	mint_a: String,
	/// The `mint_b` account
	#[arg(long)]
	mint_b: String,
	/// The `maker_ata_a` account
	#[arg(long)]
	maker_ata_a: String,
	/// The `escrow` account
	#[arg(long)]
	escrow: String,
	/// The `vault` account
	#[arg(long)]
	vault: String,
	/// The `token_program` account
	#[arg(long)]
	token_program: String,
}

pub(crate) fn run(context: &CliContext, args: MakeArgs) -> Result<(), CliError> {
	let maker = match &args.maker {
		Some(value) => CliContext::pubkey("--maker", value)?,
		None => context.payer_pubkey(),
	};
	let mint_a = CliContext::pubkey("--mint_a", &args.mint_a)?;
	let mint_b = CliContext::pubkey("--mint_b", &args.mint_b)?;
	let maker_ata_a = CliContext::pubkey("--maker_ata_a", &args.maker_ata_a)?;
	let escrow = CliContext::pubkey("--escrow", &args.escrow)?;
	let vault = CliContext::pubkey("--vault", &args.vault)?;
	let token_program = CliContext::pubkey("--token_program", &args.token_program)?;
	let data = MakeInstructionData::new(|data| {
		data.seed.set(args.seed);
		data.amount_a.set(args.amount_a);
		data.amount_b.set(args.amount_b);
		data.bump = args.bump;
	})
	.map_err(|_| CliError::InvalidData {
		message: "instruction data rejected the provided arguments".to_string(),
	})?;

	let accounts = Make {
		maker: maker,
		mint_a: mint_a,
		mint_b: mint_b,
		maker_ata_a: maker_ata_a,
		escrow: escrow,
		vault: vault,
		associated_token_program: Pubkey::from_str_const("ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL"),
		system_program: Pubkey::from_str_const("11111111111111111111111111111111"),
		token_program: token_program,
	};

	context.send(accounts.instruction(data))
}

==== src/commands/mod.rs ====
//! This code was AUTOGENERATED by `pina_cli_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from the program IDL instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::too_many_arguments
)]

pub mod make;
pub mod take;

pub use make::MakeArgs;
pub use take::TakeArgs;

==== src/commands/take.rs ====
//! This code was AUTOGENERATED by `pina_cli_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from the program IDL instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::too_many_arguments
)]

use clap::Args;

use crate::context::CliContext;
use crate::context::CliError;
use fixture_client::instructions::Take;
use fixture_client::instructions::TakeInstructionData;
use solana_sdk::pubkey::Pubkey;

#[derive(Debug, Args)]
pub struct TakeArgs {
	/// The `taker` account [default: payer]
	#[arg(long)]
	taker: Option<String>,
	/// The `mint_a` account
	#[arg(long)]
	mint_a: String,
	/// The `mint_b` account
	#[arg(long)]
	mint_b: String,
	/// The `taker_ata_a` account
	#[arg(long)]
	taker_ata_a: String,
	/// The `taker_ata_b` account
	#[arg(long)]
	taker_ata_b: String,
	/// The `maker` account
	#[arg(long)]
	maker: String,
	/// The `maker_ata_b` account
	#[arg(long)]
	maker_ata_b: String,
	/// The `escrow` account
	#[arg(long)]
	escrow: String,
	/// The `vault` account
	#[arg(long)]
	vault: String,
	/// The `token_program` account
	#[arg(long)]
	token_program: String,
}

pub(crate) fn run(context: &CliContext, args: TakeArgs) -> Result<(), CliError> {
	let taker = match &args.taker {
		Some(value) => CliContext::pubkey("--taker", value)?,
		None => context.payer_pubkey(),
	};
	let mint_a = CliContext::pubkey("--mint_a", &args.mint_a)?;
	let mint_b = CliContext::pubkey("--mint_b", &args.mint_b)?;
	let taker_ata_a = CliContext::pubkey("--taker_ata_a", &args.taker_ata_a)?;
	let taker_ata_b = CliContext::pubkey("--taker_ata_b", &args.taker_ata_b)?;
	let maker = CliContext::pubkey("--maker", &args.maker)?;
	let maker_ata_b = CliContext::pubkey("--maker_ata_b", &args.maker_ata_b)?;
	let escrow = CliContext::pubkey("--escrow", &args.escrow)?;
	let vault = CliContext::pubkey("--vault", &args.vault)?;
	let token_program = CliContext::pubkey("--token_program", &args.token_program)?;
	let data = TakeInstructionData::new(|_data| {})
	.map_err(|_| CliError::InvalidData {
		message: "instruction data rejected the provided arguments".to_string(),
	})?;

	let accounts = Take {
		taker: taker,
		mint_a: mint_a,
		mint_b: mint_b,
		taker_ata_a: taker_ata_a,
		taker_ata_b: taker_ata_b,
		maker: maker,
		maker_ata_b: maker_ata_b,
		escrow: escrow,
		vault: vault,
		token_program: token_program,
		associated_token_program: Pubkey::from_str_const("ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL"),
		system_program: Pubkey::from_str_const("11111111111111111111111111111111"),
	};

	context.send(accounts.instruction(data))
}

==== src/context.rs ====
//! This code was AUTOGENERATED by `pina_cli_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from the program IDL instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::too_many_arguments
)]

//! Shared runtime for the generated CLI: endpoint resolution, keypair loading,
//! transaction sending, and account fetching.

use std::path::PathBuf;

use solana_rpc_client::api::client_error::Error as ClientError;
use solana_rpc_client::rpc_client::RpcClient;
use solana_sdk::instruction::Instruction;
use solana_sdk::pubkey::ParsePubkeyError;
use solana_sdk::pubkey::Pubkey;
use solana_sdk::signature::Keypair;
use solana_sdk::signature::Signer;
use solana_sdk::signature::read_keypair_file;
use solana_sdk::transaction::Transaction;
use thiserror::Error;

const MAINNET_ENDPOINT: &str = "https://api.mainnet-beta.solana.com";
const DEVNET_ENDPOINT: &str = "https://api.devnet.solana.com";
const TESTNET_ENDPOINT: &str = "https://api.testnet.solana.com";
const LOCALNET_ENDPOINT: &str = "http://localhost:8899";

/// Errors surfaced by every generated command.
#[derive(Debug, Error)]
pub enum CliError {
	#[error("`{value}` is not a valid RPC endpoint; expected mainnet, devnet, testnet, localhost, or an http(s) URL")]
	InvalidEndpoint { value: String },

	#[error("plaintext `http://` endpoints are only allowed on localhost; use https for remote clusters")]
	InsecureEndpoint { value: String },

	#[error("`{flag}` must be a base58 public key: {source}")]
	InvalidPubkey { flag: String, source: ParsePubkeyError },

	#[error("`{flag}` must be valid base58: {source}")]
	InvalidBase58 {
		flag: String,
		source: bs58::decode::Error,
	},

	#[error("`{flag}` must hold exactly {expected} bytes, found {actual}")]
	InvalidByteLength {
		flag: String,
		expected: usize,
		actual: usize,
	},

	#[error("could not load payer keypair `{path}`: {message}")]
	Keypair { path: PathBuf, message: String },

	#[error("RPC request failed: {0}")]
	Rpc(#[from] ClientError),

	#[error("the transaction failed: {0}")]
	TransactionFailed(String),

	#[error("account `{address}` was not found")]
	AccountNotFound { address: String },

	#[error("account `{address}` belongs to `{owner}`, not the configured program")]
	AccountOwnerMismatch { address: String, owner: String },

	#[error("account `{address}` could not be decoded: {message}")]
	AccountDecode { address: String, message: String },

	#[error("instruction data is invalid: {message}")]
	InvalidData { message: String },

	#[error("derive `--address` explicitly or provide PDA seed `{seed}` for `{account}`")]
	MissingSeed { account: String, seed: String },
}

/// Shared configuration and RPC connection for one CLI invocation.
pub struct CliContext {
	pub rpc: RpcClient,
	pub payer: Keypair,
	pub program_address: Pubkey,
	pub simulate: bool,
	pub json: bool,
	cluster: &'static str,
}

impl CliContext {
	/// Build the context from the parsed global flags.
	pub fn new(
		url: &str,
		keypair: &str,
		program_address: Pubkey,
		simulate: bool,
		json: bool,
	) -> Result<Self, CliError> {
		let (endpoint, cluster) = resolve_endpoint(url)?;
		let payer = load_keypair(keypair)?;

		Ok(Self {
			rpc: RpcClient::new(endpoint),
			payer,
			program_address,
			simulate,
			json,
			cluster,
		})
	}

	/// The payer public key.
	#[must_use]
	pub fn payer_pubkey(&self) -> Pubkey {
		self.payer.pubkey()
	}

	/// Parse and validate a base58 public key flag.
	pub fn pubkey(flag: &str, value: &str) -> Result<Pubkey, CliError> {
		value
			.parse()
			.map_err(|source| CliError::InvalidPubkey {
				flag: flag.to_string(),
				source,
			})
	}

	/// Decode a capacity-bounded byte flag from base58.
	pub fn byte_vec(flag: &str, value: &str) -> Result<Vec<u8>, CliError> {
		bs58::decode(value)
			.into_vec()
			.map_err(|source| CliError::InvalidBase58 {
				flag: flag.to_string(),
				source,
			})
	}

	/// Decode an exact-length byte flag from base58.
	pub fn bytes<const N: usize>(flag: &str, value: &str) -> Result<[u8; N], CliError> {
		let decoded = bs58::decode(value)
			.into_vec()
			.map_err(|source| CliError::InvalidBase58 {
				flag: flag.to_string(),
				source,
			})?;

		decoded.try_into().map_err(|actual: Vec<u8>| {
			CliError::InvalidByteLength {
				flag: flag.to_string(),
				expected: N,
				actual: actual.len(),
			}
		})
	}

	/// Send or simulate one instruction, printing the result.
	pub fn send(&self, instruction: Instruction) -> Result<(), CliError> {
		let mut instruction = instruction;
		instruction.program_id = self.program_address;
		let blockhash = self.rpc.get_latest_blockhash()?;
		let transaction = Transaction::new_signed_with_payer(
			&[instruction],
			Some(&self.payer.pubkey()),
			&[&self.payer],
			blockhash,
		);

		if self.simulate {
			return self.simulate(&transaction);
		}

		let signature = self.rpc.send_and_confirm_transaction(&transaction)?.to_string();
		if self.json {
			println!("{{\"signature\":\"{signature}\"}}");
		} else {
			println!("Signature: {signature}");
			if !self.cluster.is_empty() {
				println!(
					"https://explorer.solana.com/tx/{signature}?cluster={}",
					self.cluster
				);
			}
		}
		Ok(())
	}

	fn simulate(&self, transaction: &Transaction) -> Result<(), CliError> {
		let simulation = self.rpc.simulate_transaction(transaction)?.value;
		let logs = simulation.logs.clone();
		let consumed = simulation.units_consumed;

		if self.json {
			println!(
				"{}",
				serde_json::json!({ "logs": logs, "unitsConsumed": consumed })
			);
		} else {
			for log in logs.iter().flatten() {
				println!("{log}");
			}
			if let Some(consumed) = consumed {
				println!("Consumed {consumed} compute units");
			}
		}

		if let Some(failure) = simulation.err {
			let logs = logs.unwrap_or_default().join("\n");
			return Err(CliError::TransactionFailed(format!("{failure}\n{logs}")));
		}
		Ok(())
	}

	/// Fetch one owned account, verifying its owner matches the program.
	pub fn fetch_account(&self, address: &Pubkey) -> Result<Vec<u8>, CliError> {
		let account = self.rpc.get_account(address)?;

		if account.owner != self.program_address {
			return Err(CliError::AccountOwnerMismatch {
				address: address.to_string(),
				owner: account.owner.to_string(),
			});
		}
		Ok(account.data)
	}
}

/// Resolve a cluster name or URL, rejecting plaintext remote endpoints.
///
/// # Errors
///
/// Returns an error for endpoints that are neither https nor localhost http.
pub fn resolve_endpoint(value: &str) -> Result<(String, &'static str), CliError> {
	let (endpoint, cluster): (&str, &str) = match value {
		"mainnet" | "mainnet-beta" => (MAINNET_ENDPOINT, ""),
		"devnet" => (DEVNET_ENDPOINT, "devnet"),
		"testnet" => (TESTNET_ENDPOINT, "testnet"),
		"localhost" | "localnet" => (LOCALNET_ENDPOINT, "custom"),
		custom => (custom, "custom"),
	};

	let lowercase = endpoint.to_ascii_lowercase();
	let is_local = lowercase.starts_with("http://localhost")
		|| lowercase.starts_with("http://127.0.0.1")
		|| lowercase.starts_with("http://[::1]");
	if !lowercase.starts_with("https://") && !(lowercase.starts_with("http://") && is_local) {
		return Err(CliError::InsecureEndpoint {
			value: value.to_string(),
		});
	}

	Ok((endpoint.to_string(), cluster))
}

fn load_keypair(path: &str) -> Result<Keypair, CliError> {
	let expanded = expand_home(path);
	read_keypair_file(&expanded).map_err(|error| CliError::Keypair {
		path: PathBuf::from(expanded),
		message: error.to_string(),
	})
}

fn expand_home(path: &str) -> String {
	let Some(rest) = path.strip_prefix("~/") else {
		return path.to_string();
	};
	match std::env::var("HOME") {
		Ok(home) if !home.is_empty() => format!("{home}/{rest}"),
		_ => path.to_string(),
	}
}

/// Map a custom program error code to its IDL name.
pub fn program_error_name(code: u32) -> Option<&'static str> {
	match code {
		0 => Some("OfferKeyMismatch"),
		1 => Some("TokenAccountMismatch"),
		_ => None,
	}
}

==== src/fetch.rs ====
//! This code was AUTOGENERATED by `pina_cli_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from the program IDL instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::too_many_arguments
)]

use clap::Args;
use clap::Subcommand;
use serde_json::Value;
use serde_json::json;

use crate::context::CliContext;
use crate::context::CliError;
use fixture_client;
use solana_sdk::pubkey::Pubkey;

#[derive(Debug, Subcommand)]
pub enum Command {

	EscrowState(EscrowStateArgs),
}

#[derive(Debug, Args)]
pub struct EscrowStateArgs {
	/// Account address; overrides PDA derivation.
	#[arg(long)]
	address: Option<String>,
	/// PDA seed `maker`.
	#[arg(long)]
	maker: Option<String>,
	/// PDA seed `seed`.
	#[arg(long)]
	seed: Option<u64>,
}


pub(crate) fn run(context: &CliContext, command: Command) -> Result<(), CliError> {
	match command {
		Command::EscrowState(args) => fetch_escrow_state(context, args),
	}
}

fn fetch_escrow_state(context: &CliContext, args: EscrowStateArgs) -> Result<(), CliError> {
	let address = match &args.address {
		Some(value) => CliContext::pubkey("--address", value)?,
		None => {
				let maker = match &args.maker {
					Some(value) => CliContext::pubkey("--maker", value)?,
					None => return Err(CliError::MissingSeed { account: "escrow-state".to_string(), seed: "--maker".to_string() }),
				};
				let seed = args.seed.ok_or_else(|| CliError::MissingSeed { account: "escrow-state".to_string(), seed: "--seed".to_string() })?;
			let seed_bytes = seed.to_le_bytes();
			let seeds: &[&[u8]] = &["escrow".as_bytes(), maker.as_ref(), seed_bytes.as_ref()];
			Pubkey::find_program_address(seeds, &context.program_address).0
		}
	};
	let data = context.fetch_account(&address)?;
	let value = match fixture_client::accounts::EscrowState::from_bytes(&data) {
		Ok(account) => escrow_state_json(&account),
		Err(error) => return Err(CliError::AccountDecode {
			address: address.to_string(),
			message: error.to_string(),
		}),
	};
	print_value(context.json, "escrow-state", &address, &value);
	Ok(())
}

fn escrow_state_json(account: &fixture_client::accounts::EscrowStateZc) -> Value {
	json!({
		"maker": account.maker.to_string(),
		"mint_a": account.mint_a.to_string(),
		"mint_b": account.mint_b.to_string(),
		"amount_a": account.amount_a.get(),
		"amount_b": account.amount_b.get(),
		"seed": account.seed.get(),
		"bump": account.bump,
	})
}

fn print_value(json_output: bool, name: &str, address: &Pubkey, value: &Value) {
	if json_output {
		println!("{}", serde_json::to_string_pretty(value).unwrap_or_default());
		return;
	}

	println!("{name} {address}");
	if let Some(fields) = value.as_object() {
		for (key, value) in fields {
			println!("  {key}: {value}");
		}
	}
}

==== src/main.rs ====
//! This code was AUTOGENERATED by `pina_cli_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from the program IDL instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::too_many_arguments
)]

//! Generated CLI for the `escrowProgram` program.

mod commands;
mod context;
mod fetch;
use clap::Parser;
use clap::Subcommand;
use context::CliContext;
use solana_sdk::pubkey::Pubkey;

/// Command-line interface for escrowProgram
#[derive(Debug, Parser)]
#[command(name = "escrow-program-cli", version = env!("CARGO_PKG_VERSION"), propagate_version = true)]
struct Cli {
	/// RPC endpoint: `mainnet`, `devnet`, `testnet`, `localhost`, or an https URL.
	#[arg(short = 'u', long, default_value = "devnet", env = "SOLANA_URL")]
	url: String,

	/// Payer keypair file in the standard Solana JSON byte-array format.
	#[arg(short = 'k', long, default_value = "~/.config/solana/id.json", env = "PINA_KEYPAIR")]
	keypair: String,

	/// Override the on-chain program address.
	#[arg(long)]
	program_id: Option<String>,

	/// Simulate the transaction and print its logs instead of sending.
	#[arg(long)]
	simulate: bool,

	/// Print machine-readable JSON output.
	#[arg(long)]
	json: bool,

	#[command(subcommand)]
	command: Command,
}

#[derive(Debug, Subcommand)]
enum Command {

	Make(commands::MakeArgs),

	Take(commands::TakeArgs),
	/// Fetch and decode a program account.
	#[command(subcommand)]
	Fetch(fetch::Command),
}

fn main() {
	let cli = Cli::parse();
	if let Err(error) = run(cli) {
		eprintln!("error: {error}");
		std::process::exit(1);
	}
}

fn run(cli: Cli) -> Result<(), context::CliError> {
	let program_address = match &cli.program_id {
		Some(value) => CliContext::pubkey("--program-id", value)?,
		None => Pubkey::from_str_const("4ibrEMW5F6hKnkW4jVedswYv6H6VtwPN6ar6dvXDN1nT"),
	};
	let context = CliContext::new(&cli.url, &cli.keypair, program_address, cli.simulate, cli.json)?;

	match cli.command {
		Command::Make(args) => commands::make::run(&context, args),
		Command::Take(args) => commands::take::run(&context, args),
		Command::Fetch(command) => fetch::run(&context, command),
	}
}
